auto configured the @EnableEurekaServer and properties by springBoot

--- a/Eureka-Registry/src/main/resources/application.yml
+++ b/Eureka-Registry/src/main/resources/application.yml
@@ -5,3 +5,5 @@ eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
+
+    ## all the above properties are auto configured in springBoot app after adding dependency
