added the entity and repo, controller, service classes and properties as well

--- a/Manual-Emp-Service/src/main/resources/application.yml
+++ b/Manual-Emp-Service/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
-  port: 9090
+  port: 8902
+
+spring:
+  application:
+    name: Employee-service
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+logging:
+  pattern:
+    file:
