--- a/Manual-Emp-Service/pom.xml
+++ b/Manual-Emp-Service/pom.xml
@@ -56,6 +56,16 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.12</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
