--- a/Database-Manager-Service/src/main/resources/application.yml
+++ b/Database-Manager-Service/src/main/resources/application.yml
@@ -17,8 +17,11 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
-logging:
-   pattern:
-     file:
+    service-url:
+     defaultZone: http://localhost:8761/eureka/
+
+#logging:
+#   pattern:
+#     file:
 
 
