--- a/Manual-Emp-Service/src/main/resources/application.yml
+++ b/Manual-Emp-Service/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
 #  client:
 #    register-with-eureka: true
 #    fetch-registry: true
-logging:
-  pattern:
-    file:
+#logging:
+#  pattern:
+#    file:
+
+eureka:
+  client:
+    service-url:
+        defaultZone: http://localhost:8761/eureka/
